Resolves: fdo#88970 fix Incorrect Extended-tips with dodgy ahelp tags

ahelp puts the tip on the previous bookmarks with hid branches
but has a scattergun effect if those previous bookmarks have
nothing to do with the current element being described.

So take the hid attribute of the ahelp and if its hid="." use
the current set of bookmarks as the context otherwise believe
it and apply the tip just to the stated hid

Change-Id: I00648daadf5673e1abc96f222a4526959f1f7d7a